--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,16 +21,16 @@
     "axios": "^1.13.2",
     "base-64": "^1.0.0",
     "date-fns": "^4.1.0",
-    "expo": "~54.0.6",
-    "expo-asset": "~12.0.10",
-    "expo-blur": "~15.0.7",
-    "expo-constants": "~18.0.10",
-    "expo-file-system": "^19.0.19",
-    "expo-font": "~14.0.9",
-    "expo-gl": "~16.0.7",
-    "expo-image-picker": "~17.0.8",
-    "expo-linear-gradient": "~15.0.7",
-    "expo-status-bar": "~3.0.8",
+    "expo": "~54.0.27",
+    "expo-asset": "~12.0.11",
+    "expo-blur": "~15.0.8",
+    "expo-constants": "~18.0.11",
+    "expo-file-system": "~19.0.20",
+    "expo-font": "~14.0.10",
+    "expo-gl": "~16.0.8",
+    "expo-image-picker": "~17.0.9",
+    "expo-linear-gradient": "~15.0.8",
+    "expo-status-bar": "~3.0.9",
     "expo-three": "^8.0.0",
     "i18next": "^25.6.3",
     "lottie-react-native": "~7.3.1",
