--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
     "@lottiefiles/dotlottie-react": "^0.13.5",
     "@react-native-async-storage/async-storage": "2.2.0",
     "@react-native-community/netinfo": "11.4.1",
+    "@react-native-community/slider": "^5.0.1",
     "@react-navigation/bottom-tabs": "^7.8.5",
     "@react-navigation/native": "^7.1.20",
     "@react-navigation/native-stack": "^7.6.3",
@@ -45,9 +46,11 @@
     "react-native-safe-area-context": "~5.6.0",
     "react-native-screens": "~4.16.0",
     "react-native-web": "^0.21.0",
+    "react-native-web-webview": "^1.0.2",
     "react-native-webview": "13.15.0",
     "react-native-worklets": "0.5.1",
     "react-native-worklets-core": "^1.6.2",
+    "react-native-youtube-iframe": "^2.4.1",
     "three": "^0.160.0",
     "three-stdlib": "^2.36.1"
   },
